--- a/students/wma422837-MuhammadAhmed/index.html
+++ b/students/wma422837-MuhammadAhmed/index.html
@@ -116,15 +116,15 @@
                   <path fill="#FFF" fill-rule="evenodd"
                     d="M16.21 4.41C9.973 4.41 4.917 9.465 4.917 15.7c0 2.134.592 4.13 1.62 5.832L4.5 27.59l6.25-2.002a11.24 11.24 0 0 0 5.46 1.404c6.234 0 11.29-5.055 11.29-11.29 0-6.237-5.056-11.292-11.29-11.292m0 20.69c-1.91 0-3.69-.57-5.173-1.553l-3.61 1.156 1.173-3.49a9.35 9.35 0 0 1-1.79-5.512c0-5.18 4.217-9.4 9.4-9.4s9.397 4.22 9.397 9.4c0 5.188-4.214 9.4-9.398 9.4zm5.293-6.832c-.284-.155-1.673-.906-1.934-1.012-.265-.106-.455-.16-.658.12s-.78.91-.954 1.096c-.176.186-.345.203-.628.048-.282-.154-1.2-.494-2.264-1.517-.83-.795-1.373-1.76-1.53-2.055s0-.445.15-.584c.134-.124.3-.326.45-.488.15-.163.203-.28.306-.47.104-.19.06-.36-.005-.506-.066-.147-.59-1.587-.81-2.173-.218-.586-.46-.498-.63-.505-.168-.007-.358-.038-.55-.045-.19-.007-.51.054-.78.332-.277.274-1.05.943-1.1 2.362-.055 1.418.926 2.826 1.064 3.023.137.2 1.874 3.272 4.76 4.537 2.888 1.264 2.9.878 3.43.85.53-.027 1.734-.633 2-1.297s.287-1.24.22-1.363c-.07-.123-.26-.203-.54-.357z"
                     clip-rule="evenodd"></path>
-                </svg></span><span class="a2a_label"></span></a><a class="a2a_button_email" href="/#email"
-              title="Email" rel="nofollow noopener" target="_blank"><span class="a2a_svg a2a_s__default a2a_s_email"
+                </svg></span><span class="a2a_label"></span></a><a class="a2a_button_email" href="/#email" title="Email"
+              rel="nofollow noopener" target="_blank"><span class="a2a_svg a2a_s__default a2a_s_email"
                 style="background-color: rgb(136, 137, 144); width: 30px; line-height: 30px; height: 30px; background-size: 30px; border-radius: 4px;"><svg
                   focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                   <path fill="#fff"
                     d="M27 21.775v-9.9s-10.01 6.985-10.982 7.348C15.058 18.878 5 11.875 5 11.875v9.9c0 1.375.293 1.65 1.65 1.65h18.7c1.393 0 1.65-.242 1.65-1.65m-.017-11.841c0-1.002-.291-1.359-1.633-1.359H6.65c-1.38 0-1.65.429-1.65 1.43l.016.154s9.939 6.842 11 7.216C17.14 16.941 27 10.005 27 10.005z">
                   </path>
-                </svg></span><span class="a2a_label"></span></a><a class="a2a_button_print" href="/#print"
-              title="Print" rel="nofollow noopener" target="_blank"><span class="a2a_svg a2a_s__default a2a_s_print"
+                </svg></span><span class="a2a_label"></span></a><a class="a2a_button_print" href="/#print" title="Print"
+              rel="nofollow noopener" target="_blank"><span class="a2a_svg a2a_s__default a2a_s_print"
                 style="background-color: rgb(136, 137, 144); width: 30px; line-height: 30px; height: 30px; background-size: 30px; border-radius: 4px;"><svg
                   focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                   <path fill="#fff" fill-rule="evenodd"
@@ -142,7 +142,40 @@
 
 
 
+  <div class="card-group">
+    <div class="card">
+      <img src="./images/open-digital-account.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.</p>
 
+      </div>
+    </div>
+    <div class="card">
+      <img src="./images/debit-cards-discount.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./images/debit-cards.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This card has even longer content than the first to show that equal height action.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./images/Freelancer-Accounts.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This card has even longer content than the first to show that equal height action.</p>
+      </div>
+    </div>
+  </div>
 
 
 
