add links and extra page

--- a/students/wma422837-MuhammadAhmed/bank-accounts.html
+++ b/students/wma422837-MuhammadAhmed/bank-accounts.html
@@ -533,9 +533,9 @@
 
 	<header class="container-fluid header hidden-xs">
 		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 logo">
-			<a href="/"><img src="./images/logo.png" alt="Meezan Bank Ltd." class="img-responsive logo-max-width"
+			<a href="index.html"><img src="./images/logo.png" alt="Meezan Bank Ltd." class="img-responsive logo-max-width"
 					style="height:60px;"></a>
-			<a href="/"><img src="./images/logo.png" alt="Meezan Bank Ltd." class="img-responsive logo-max-width"></a>
+			<a href="index.html"><img src="./images/logo.png" alt="Meezan Bank Ltd." class="img-responsive logo-max-width"></a>
 		</div>
 		<nav class="col-lg-6 col-md-6 col-sm-6 col-xs-12 navbar navbar-default">
 			<div class="navbar-header">
@@ -929,7 +929,7 @@
 		</div>
 		<div class="container">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 account"><a class="block"
-					href="/rupee-current-account"><img class="img-responsive"
+					href="./rupee-current-account"><img class="img-responsive"
 						src="./images/rupee-account.jpg"
 						alt="Rupee Account" /></a> <a class="block text-purple" href="/rupee-current-account">Rupee
 					Account</a> <a class="block purple-link" href="/rupee-current-account">Learn More</a></div>
@@ -963,7 +963,7 @@
 		<div class="container">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 account"><a class="block"
 					href="/rupee-savings-account"><img class="img-responsive"
-						src="/images/rupee-account.jpg"
+						src="./images/rupee-account.jpg"
 						alt="Rupee Account" /></a> <a class="block text-purple" href="/rupee-savings-account">Rupee
 					Account</a> <a class="block purple-link" href="/rupee-savings-account">Learn More</a></div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 account"><a class="block"
