--- a/students/wma422837-MuhammadAhmed/term-certificates.html
+++ b/students/wma422837-MuhammadAhmed/term-certificates.html
@@ -71,7 +71,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -533,14 +533,13 @@
 
     <header class="container-fluid header hidden-xs">
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 logo">
-            <a href="/"><img src="./images/logo.png"
-                    alt="Meezan Bank Ltd." class="img-responsive logo-max-width" style="height:60px;"></a>
-            <a href="/"><img src="./images/logo.png"
-                    alt="Meezan Bank Ltd." class="img-responsive logo-max-width"></a>
+            <a href="index.html"><img src="./images/logo.png" alt="Meezan Bank Ltd." class="img-responsive logo-max-width"
+                    style="height:60px;"></a>
+            <a href="index.html"><img src="./images/logo.png" alt="Meezan Bank Ltd." class="img-responsive logo-max-width"></a>
         </div>
         <nav class="col-lg-6 col-md-6 col-sm-6 col-xs-12 navbar navbar-default">
             <div class="navbar-header">
-                <form action="https://www.meezanbank.com" method="GET" class="search-form visible-xs"
+                <form action="./index.html" method="GET" class="search-form visible-xs"
                     onsubmit="return search_mobile()">
                     <input type="text" id="s_mobile" name="s" class="search-field" placeholder="Search" maxlength="30">
                     <input type="submit" value="" class="search-btn">
@@ -559,36 +558,36 @@
                         <ul class="dropdown-menu header-main-menu animatedfast headerAnimate">
                             <li>
                                 <a href="./bank-accounts.html">
-                                    <img src="./images/bank-accounts.png"
-                                        alt="Bank Accounts" class="img-responsive hidden-xs">
+                                    <img src="./images/bank-accounts.png" alt="Bank Accounts"
+                                        class="img-responsive hidden-xs">
                                     <h3>Bank Accounts</h3>
                                 </a>
                             </li>
                             <li>
                                 <a href="./term-certificates.html">
-                                    <img src="./images/invest-with-us.png"
-                                        alt="Invest with Us" class="img-responsive hidden-xs">
+                                    <img src="./images/invest-with-us.png" alt="Invest with Us"
+                                        class="img-responsive hidden-xs">
                                     <h3>Term Deposits</h3>
                                 </a>
                             </li>
                             <li>
                                 <a href="/car-ijarah">
-                                    <img src="./images/consumer-finance.png"
-                                        alt="Consumer Finance" class="img-responsive hidden-xs">
+                                    <img src="./images/consumer-finance.png" alt="Consumer Finance"
+                                        class="img-responsive hidden-xs">
                                     <h3>Consumer Finance</h3>
                                 </a>
                             </li>
                             <li>
                                 <a href="/premium-banking">
-                                    <img src="./images/premium-banking.jpg"
-                                        alt="Premium Banking" class="img-responsive hidden-xs">
+                                    <img src="./images/premium-banking.jpg" alt="Premium Banking"
+                                        class="img-responsive hidden-xs">
                                     <h3>Premium Banking</h3>
                                 </a>
                             </li>
                             <li>
                                 <a href="/women-account">
-                                    <img src="./images/women-banking.jpg"
-                                        alt="Women's Banking" class="img-responsive hidden-xs">
+                                    <img src="./images/women-banking.jpg" alt="Women's Banking"
+                                        class="img-responsive hidden-xs">
                                     <h3>Women's Banking</h3>
                                 </a>
                             </li>
@@ -890,7 +889,8 @@
                             href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fwww.meezanbank.com%2Fterm-certificates%2F&amp;linkname=Term%20Certificates"
                             title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_print"
                             href="https://www.addtoany.com/add_to/print?linkurl=https%3A%2F%2Fwww.meezanbank.com%2Fterm-certificates%2F&amp;linkname=Term%20Certificates"
-                            title="Print" rel="nofollow noopener" target="_blank"></a></div>
+                            title="Print" rel="nofollow noopener" target="_blank"></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -913,8 +913,8 @@
             <div
                 class="col-lg-offset-2 col-lg-3 col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-12 invest-with-us-img">
                 <a href="/monthly-mudarabah-certificate" class="hover-effect"><img
-                        src="./images/mudarabah-certificate.jpg"
-                        alt="Montly Mudarabah Certificate" class="img-responsive"></a>
+                        src="./images/mudarabah-certificate.jpg" alt="Montly Mudarabah Certificate"
+                        class="img-responsive"></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 invest-with-us">
                 <h3 class="text-purple font-bold">Monthly Mudarabah Certificate</h3>
@@ -934,8 +934,8 @@
             <div
                 class="col-lg-offset-2 col-lg-3 col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-12 invest-with-us-img">
                 <a href="/certificate-of-islamic-investment" class="hover-effect"><img
-                        src="./images/islamic-investment.jpg"
-                        alt="Certificate of Islamic Investment" class="img-responsive"></a>
+                        src="./images/islamic-investment.jpg" alt="Certificate of Islamic Investment"
+                        class="img-responsive"></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 invest-with-us">
                 <h3 class="text-purple font-bold">Certificate of Islamic Investment</h3>
@@ -956,8 +956,8 @@
             <div
                 class="col-lg-offset-2 col-lg-3 col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-12 invest-with-us-img">
                 <a href="/senior-certificate-of-islamic-investment" class="hover-effect"><img
-                        src="./images/senior-islamic-investment.jpg"
-                        alt="Certificate of Islamic Investment" class="img-responsive"></a>
+                        src="./images/senior-islamic-investment.jpg" alt="Certificate of Islamic Investment"
+                        class="img-responsive"></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 invest-with-us">
                 <h3 class="text-purple font-bold">Certificate of Islamic Investment - Senior</h3>
@@ -977,8 +977,7 @@
         <div class="container">
             <div
                 class="col-lg-offset-2 col-lg-3 col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-12 invest-with-us-img">
-                <a href="/meezan-amdaan-certificate" class="hover-effect"><img
-                        src="./images/amdaan-certificate.jpg"
+                <a href="/meezan-amdaan-certificate" class="hover-effect"><img src="./images/amdaan-certificate.jpg"
                         alt="Meezan Amdaan Certificate" class="img-responsive"></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 invest-with-us">
@@ -1000,8 +999,7 @@
         <div class="container">
             <div
                 class="col-lg-offset-2 col-lg-3 col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-12 invest-with-us-img">
-                <a href="/senior-citizen-certificate" class="hover-effect"><img
-                        src="./images/senior-citizens.jpg"
+                <a href="/senior-citizen-certificate" class="hover-effect"><img src="./images/senior-citizens.jpg"
                         alt="Meezan Amdaan Certificate" class="img-responsive"></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 invest-with-us">
@@ -1024,8 +1022,8 @@
             <div
                 class="col-lg-offset-2 col-lg-3 col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-12 invest-with-us-img">
                 <a href="/dollar-mudarabah-certificate" class="hover-effect"><img
-                        src="./images/dollar-mudarabah-certificate.jpg"
-                        alt="Dollar Mudarabah Certificate" class="img-responsive"></a>
+                        src="./images/dollar-mudarabah-certificate.jpg" alt="Dollar Mudarabah Certificate"
+                        class="img-responsive"></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 invest-with-us">
                 <h3 class="text-purple font-bold">Dollar Mudarabah Certificate</h3>
@@ -1095,8 +1093,8 @@
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
                     <h3>Personal Banking</h3>
                     <ul>
-                        <li><a href="/bank-accounts">Bank Accounts</a></li>
-                        <li><a href="/term-certificates">Term Deposits</a></li>
+                        <li><a href="./bank-accounts.html">Bank Accounts</a></li>
+                        <li><a href="./term-certificates.html">Term Deposits</a></li>
                         <li><a href="/car-ijarah">Consumer Finance</a></li>
                         <li><a href="/home-remittance">Home Remittance</a></li>
                         <li><a href="/premium-banking">Premium Banking</a></li>
