--- a/students/wma422837-MuhammadAhmed/index.html
+++ b/students/wma422837-MuhammadAhmed/index.html
@@ -650,7 +650,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="/ways-to-bank">Ways to Bank</a></li>
+                    <li><a href="./ways-to-bank.html">Ways to Bank</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
                         <ul class="dropdown-menu header-main-menu animatedfast headerAnimate" style="width:610px">
@@ -803,7 +803,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/ways-to-bank"><img class="wtb-homepage wtb-homepage-ways-to-bank-icon"> <span>Ways to
+                        <a href="./ways-to-bank.html"><img class="wtb-homepage wtb-homepage-ways-to-bank-icon"> <span>Ways to
                                 Bank</span></a>
                     </li>
                     <li id="aboutus-li">
